--- a/ProfileLoader/ProfileLoader.csproj
+++ b/ProfileLoader/ProfileLoader.csproj
@@ -40,7 +40,9 @@
       <HintPath>..\..\..\..\..\Downloads\ZzukBot3\Internal\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -55,6 +57,7 @@
     <Compile Include="Loader.cs" />
     <Compile Include="Hotspot.cs" />
     <Compile Include="LoaderOptions.cs" />
+    <Compile Include="ProfileLoaderPlugin.cs" />
     <Compile Include="Profile.cs" />
     <Compile Include="ProfileData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
